feat: enhance UI, add ID-based cover matching, pagination, and fix DB locking

--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,9 @@ ENV/
 .idea/
 
 # Project Specific
-data/
-!data/.gitkeep
+data/collection.db
+data/covers/*
+!data/covers/.gitkeep
 *.csv
 import_goodreads.py
 
